<resources>
    <string name="app_name">Predictions</string>
    <string name="title_activity_scores">Predictions</string>
    <string name="title_activity_main">Predictions</string>

    <string name="scfc">Swansea City</string>
    <string name="cpfc">Crystal Palace</string>
    <string name="brfc">Bristol Rovers</string>
    <string name="sfc">Sunderland</string>

    <string name="positions">League Positions</string>
    <string name="scores">Scores</string>

    <string name="action_predictions">Change Predictions</string>
    <string name="action_leagues">Change Leagues</string>
    <string name="button_scores">Calculate Scores</string>
    <string name="button_update">Update Positions</string>

</resources>