<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textPositions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:text="@string/positions"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:theme="@android:style/Theme.Light">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/scfc"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/scfc" />

            <TextView
                android:id="@+id/textScfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scfc"
                android:textSize="14sp" />

        </LinearLayout>

        <NumberPicker
            android:id="@+id/numberPickerSwansea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sfc"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/sfc" />

            <TextView
                android:id="@+id/textSfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sfc"
                android:textSize="14sp" />

        </LinearLayout>

        <NumberPicker
            android:id="@+id/numberPickerSunderland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:theme="@android:style/Theme.Light" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="5dp"
        android:theme="@android:style/Theme.Light">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cpfc"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/cpfc" />

            <TextView
                android:id="@+id/textCpfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cpfc"
                android:textSize="14sp" />

        </LinearLayout>

        <NumberPicker
            android:id="@+id/numberPickerPalace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/brfc"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:src="@drawable/brfc" />

            <TextView
                android:id="@+id/textBrfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/brfc"
                android:textSize="14sp" />

        </LinearLayout>

        <NumberPicker
            android:id="@+id/numberPickerRovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:background="@drawable/bluebackground"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/calculateScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calculate"
            android:text="@string/button_scores" />

        <Button
            android:id="@+id/updatePositions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="update"
            android:text="@string/button_update" />
    </LinearLayout>

</LinearLayout>